--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev",
+		"dev": "next dev --turbo",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
@@ -16,42 +16,47 @@
 		"seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
 	},
 	"dependencies": {
-		"@prisma/client": "^5.13.0",
+		"@auth/prisma-adapter": "^2.8.0",
+		"@hookform/resolvers": "^4.1.3",
+		"@prisma/client": "^6.5.0",
 		"@radix-ui/react-checkbox": "^1.0.4",
-		"@radix-ui/react-dialog": "^1.0.5",
+		"@radix-ui/react-dialog": "^1.1.6",
+		"@radix-ui/react-label": "^2.1.2",
 		"@radix-ui/react-popover": "^1.0.7",
 		"@radix-ui/react-select": "^2.0.0",
 		"@radix-ui/react-slider": "^1.1.2",
-		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-slot": "^1.1.2",
 		"@tanstack/react-query": "^5.59.19",
-		"@types/bcrypt": "^5.0.2",
 		"@types/qs": "^6.9.15",
 		"axios": "^1.6.8",
-		"bcrypt": "^5.1.1",
-		"class-variance-authority": "^0.7.0",
+		"bcryptjs": "^3.0.2",
+		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
-		"lucide-react": "^0.376.0",
-		"next": "^15.0.3",
-		"next-auth": "^4.24.7",
+		"lucide-react": "^0.475.0",
+		"next": "^15.3.1",
+		"next-auth": "^5.0.0-beta.25",
 		"nextjs-toploader": "^1.6.12",
-		"prisma": "^5.13.0",
+		"prisma": "^6.5.0",
 		"qs": "^6.12.1",
 		"react": "^18",
 		"react-dadata": "^2.23.1",
 		"react-dom": "^18",
-		"react-hook-form": "^7.51.5",
+		"react-hook-form": "^7.54.2",
 		"react-hot-toast": "^2.4.1",
 		"react-insta-stories": "^2.7.0",
 		"react-use": "^17.5.0",
 		"resend": "^3.2.0",
-		"tailwind-merge": "^2.3.0",
+		"tailwind-merge": "^3.0.1",
 		"tailwindcss-animate": "^1.0.7",
 		"ts-node": "^10.9.2",
+		"uuid": "^11.1.0",
 		"vaul": "^0.9.0",
-		"zod": "^3.23.8",
+		"zod": "^3.24.2",
 		"zustand": "^4.5.2"
 	},
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.2",
+		"@types/bcryptjs": "^3.0.0",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
