--- a/package.json
+++ b/package.json
@@ -27,24 +27,27 @@
 		"@radix-ui/react-separator": "^1.1.4",
 		"@radix-ui/react-slider": "^1.1.2",
 		"@radix-ui/react-slot": "^1.1.2",
+		"@react-input/mask": "^2.0.4",
 		"@tanstack/react-query": "^5.59.19",
 		"@types/qs": "^6.9.15",
 		"axios": "^1.6.8",
 		"bcryptjs": "^3.0.2",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"leaflet": "^1.9.4",
 		"lucide-react": "^0.475.0",
 		"next": "^15.3.1",
 		"next-auth": "^5.0.0-beta.25",
 		"nextjs-toploader": "^1.6.12",
 		"prisma": "^6.5.0",
 		"qs": "^6.12.1",
-		"react": "^18",
-		"react-dadata": "^2.23.1",
-		"react-dom": "^18",
+		"react": "^19.1.0",
+		"react-dadata": "^2.28.0-beta.0",
+		"react-dom": "^19.1.0",
 		"react-hook-form": "^7.54.2",
 		"react-hot-toast": "^2.4.1",
 		"react-insta-stories": "^2.7.0",
+		"react-leaflet": "^5.0.0-rc.2",
 		"react-use": "^17.5.0",
 		"resend": "^3.2.0",
 		"tailwind-merge": "^3.0.1",
@@ -58,9 +61,10 @@
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.2",
 		"@types/bcryptjs": "^3.0.0",
+		"@types/leaflet": "^1.9.17",
 		"@types/node": "^20",
-		"@types/react": "^18",
-		"@types/react-dom": "^18",
+		"@types/react": "^19.1.4",
+		"@types/react-dom": "^19.1.5",
 		"eslint": "^8",
 		"eslint-config-next": "14.2.3",
 		"postcss": "^8",
